Fixed #5179 - Rating. Label alignment

--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -64,7 +64,7 @@
   }
   &.sd-rating__min-text {
     margin-right: calcSize(1);
-    margin-left: calcSize(2);
+    // margin-left: calcSize(2);
   }
   &.sd-rating__max-text {
     margin-right: calcSize(2);
